test commit message

--- a/refugeeHub/README.rdoc
+++ b/refugeeHub/README.rdoc
@@ -1,6 +1,7 @@
 == README
 
 The purpose of this code is to create an application that matches mentees with mentors. 
+#test
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
